# EmberinterTool

./: .gitignore  CMakeLists.txt  PRD.md  README.md  build-and-run.sh  opencode.json  project.md  run.sh  serial_monitor.py
.github/workflows/: build.yml  release.yml
.trae/rules/: project.md
.trae/skills/emberinter/: SKILL.md
build_win/: deploy.sh  emberInter.iss
cmake/: FindRapidJSON.cmake
deploy/: build_release_v1.3.0.ps1  collect_dlls.ps1  deploy.sh  emberInter.iss  pack_v1.3.1.ps1  pack_v1.3.1.sh  release_v1.3.0.sh
docs/: AGENTS.md  CLI接口规范文档.md  IPC通信协议文档.md  PRD.md  design.pen  project.md  交互设计文档.md  技术可行性分析报告.md  项目整改报告.md  项目架构与模块设计文档.md
resources/: resources.qrc
resources/icons/: app.rc
resources/macos/: Info.plist.in
resources/styles/: dark_theme.qss
rpm_pack/: build_rpm.sh
scripts/: make.sh  make_macos.sh  start.sh
src/cli/: CMakeLists.txt  cli_app.cpp  cli_app.h  ipc_client.cpp  ipc_client.h  main.cpp
src/core/: CMakeLists.txt  config_manager.cpp  config_manager.h  ipc_protocol.cpp  ipc_protocol.h  log_buffer.cpp  log_buffer.h  log_exporter.cpp  log_exporter.h  log_parser.cpp  log_parser.h  pty_process.h  pty_process_unix.cpp  pty_process_win.cpp  serial_engine.cpp  serial_engine.h  tab_type.h
src/core/terminal/: terminal_buffer.cpp  terminal_buffer.h  terminal_cell.cpp  terminal_cell.h  terminal_input.cpp  terminal_input.h  vt_parser.cpp  vt_parser.h
src/gui/: CMakeLists.txt  ipc_server.cpp  ipc_server.h  log_view.cpp  log_view.h  main.cpp  main_window.cpp  main_window.h  resources.qrc  send_panel.cpp  send_panel.h  serial_port_dialog.cpp  serial_port_dialog.h  serial_tab_widget.cpp  serial_tab_widget.h  settings_dialog.cpp  settings_dialog.h  status_bar.cpp  status_bar.h
src/gui/qml/: AboutDialog.qml  ConnectionWizard.qml  DebugTab.qml  SerialTab.qml  SettingsDialog.qml  TerminalTab.qml  app_core.cpp  app_core.h  debug_page.cpp  debug_page.h  main.qml  serial_tab_page.cpp  serial_tab_page.h  tab_page.h  terminal_tab_page.cpp  terminal_tab_page.h
src/gui/qml/EmberDesign/: DesignSystem.qml  qmldir
src/gui/qml/terminal/: glyph_atlas.cpp  glyph_atlas.h  terminal_model.cpp  terminal_model.h  terminal_renderer.cpp  terminal_renderer.h  terminal_view.cpp  terminal_view.h
